--- a/index.html
+++ b/index.html
@@ -1,52 +1,115 @@
-module.exports = async function handler(req, res) {
-  if (req.method !== "POST") {
-    return res.status(405).json({ error: "POST 요청만 허용됩니다." });
-  }
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>아이이름못짓겠어.kr</title>
+  <style>
+    body { font-family: sans-serif; padding: 20px; max-width: 700px; margin: auto; background-color: #f9f9f9; }
+    h1 { color: #333; }
+    .input-box, .random-box, .chart-box { background: white; padding: 20px; border-radius: 12px; margin-bottom: 20px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); }
+    button { padding: 10px 20px; border: none; background-color: #4CAF50; color: white; border-radius: 8px; cursor: pointer; }
+    input { padding: 10px; border: 1px solid #ccc; border-radius: 8px; width: 70%; }
+    .result { margin-top: 10px; font-weight: bold; }
+    ul { padding-left: 20px; }
+  </style>
+</head>
+<body>
+  <h1>👶 아이이름못짓겠어.kr</h1>
 
-  const { name } = req.body;
+  <div class="input-box">
+    <h2>1. 이름 입력 후 의미 분석</h2>
+    <input type="text" id="nameInput" placeholder="예: 우주" />
+    <button onclick="analyzeName()">뜻 분석</button>
+    <div class="result" id="nameResult"></div>
+  </div>
 
-  if (!name || name.trim() === "") {
-    return res.status(400).json({ error: "이름을 입력해주세요." });
-  }
+  <div class="random-box">
+    <h2>2. 랜덤 이름 추천</h2>
+    <button onclick="suggestNames()">랜덤 추천</button>
+    <ul id="randomList"></ul>
+  </div>
 
-  const OPENAI_API_KEY = process.env.OPENAI_API_KEY;
-  console.log("GPT 키:", OPENAI_API_KEY);
+  <div class="chart-box">
+    <h2>3. 인기 순위 (2024)</h2>
+    <strong>👦 남아 TOP 5:</strong>
+    <ol>
+      <li>이준우</li>
+      <li>김태윤</li>
+      <li>박도윤</li>
+      <li>정하람</li>
+      <li>최서준</li>
+    </ol>
+    <strong>👧 여아 TOP 5:</strong>
+    <ol>
+      <li>서아</li>
+      <li>지우</li>
+      <li>하윤</li>
+      <li>민서</li>
+      <li>수아</li>
+    </ol>
+  </div>
 
-  if (!OPENAI_API_KEY) {
-    return res.status(500).json({ error: "API 키가 설정되지 않았습니다." });
-  }
+  <script>
+    async function analyzeName() {
+      const name = document.getElementById('nameInput').value.trim();
+      const resultDiv = document.getElementById('nameResult');
 
-  const systemPrompt = `입력된 이름의 의미를 한글로 설명해줘. 이름은 한국어 이름이며, 부드럽고 따뜻한 어감으로 1~2문장으로 설명해줘. 예: 우주 → 광활한 공간을 뜻하며 자유롭고 확장적인 느낌을 줍니다.`;
-  const userPrompt = `이름: ${name}`;
+      if (!name) {
+        resultDiv.innerText = "이름을 입력해주세요.";
+        return;
+      }
 
-  try {
-    const response = await fetch("https://api.openai.com/v1/chat/completions", {
-      method: "POST",
-      headers: {
-        "Content-Type": "application/json",
-        "Authorization": `Bearer ${OPENAI_API_KEY}`
-      },
-      body: JSON.stringify({
-        model: "gpt-4o",
-        messages: [
-          { role: "system", content: systemPrompt },
-          { role: "user", content: userPrompt }
-        ],
-        temperature: 0.7
-      })
-    });
+      resultDiv.innerText = "뜻 분석 중... ⏳";
 
-    const json = await response.json();
+      try {
+        const res = await fetch('/api/analyze-name', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json'
+          },
+          body: JSON.stringify({ name })
+        });
 
-    if (!json.choices || !json.choices[0]) {
-      return res.status(500).json({ error: "GPT 응답 오류" });
+        const data = await res.json();
+
+        if (data.meaning) {
+          resultDiv.innerText = `"${name}"의 뜻: ${data.meaning}`;
+        } else {
+          resultDiv.innerText = "분석 실패 😢 다시 시도해보세요.";
+        }
+      } catch (error) {
+        resultDiv.innerText = "서버 오류가 발생했습니다.";
+        console.error(error);
+      }
     }
 
-    const answer = json.choices[0].message.content.trim();
-    return res.status(200).json({ meaning: answer });
+    function suggestNames() {
+      const names = ["우주", "하린", "이안", "서윤", "도윤", "지아", "태율", "예준", "하율", "하람"];
+      const meanings = {
+        "우주": "광활한 공간, 자유롭고 확장적인 느낌",
+        "하린": "맑고 고운 이슬처럼 깨끗한 사람",
+        "이안": "편안함, 안정을 주는 이름",
+        "서윤": "서쪽의 밝은 빛, 부드러움과 따뜻함",
+        "도윤": "길을 인도하는 사람, 지도자적 성격",
+        "지아": "지혜롭고 아름다운 사람",
+        "태율": "크게 으뜸가는 사람",
+        "예준": "예의 바르고 재능 있는 사람",
+        "하율": "맑고 부드러운 율동",
+        "하람": "하늘이 내린 뜻"
+      };
 
-  } catch (error) {
-    console.error("GPT 호출 실패:", error);
-    return res.status(500).json({ error: "서버 오류: GPT 호출 실패" });
-  }
-};
+      const shuffled = names.sort(() => 0.5 - Math.random());
+      const selected = shuffled.slice(0, 5);
+
+      const list = document.getElementById('randomList');
+      list.innerHTML = "";
+      selected.forEach(name => {
+        const li = document.createElement('li');
+        li.innerText = `${name} - ${meanings[name]}`;
+        list.appendChild(li);
+      });
+    }
+  </script>
+</body>
+</html>
